deploy: c0df4703b15ffa6f4bb3c0ff16df12a4e114f832

--- a/html/index.html
+++ b/html/index.html
@@ -50,5 +50,14 @@
       
         [<a href="./contents/HSCC2020.pdf">slide</a> | <a href="https://www.youtube.com/watch?v=v3bOf4r-O8M">video</a>]
       </li></ul>
+
+<h2>Teaching Experiences</h2>
+  <ul><li id="31477187">Computer Science Laboratory and Exercise 2 (Hardware) (計算機科学実験及演習２ (ハードウェア))
+      
+      (2020/10--) Kyoto University</li><li>
+        Teaching assistant for 
+      <a href="http://group-mmm.org/~ichiro/COURSE_formalLang2016.html">Formal Language Theory (形式言語理論)
+        </a>
+      (2016/10--2017/3) The University of Tokyo</li></ul>
 </body>
 </html>
