--- a/html/index_template.html
+++ b/html/index_template.html
@@ -15,5 +15,8 @@
 
 <h2>Selected Talks</h2>
   <xi:include href="talks.html" parse="xml" />
+
+<h2>Teaching Experiences</h2>
+  <xi:include href="teaching_experience.html" parse="xml" />
 </body>
 </html>
