deploy: cf0ff9029222e101ea7615b846d46ffcdfe949f5

--- a/html/index.html
+++ b/html/index.html
@@ -59,5 +59,10 @@
       <a href="http://group-mmm.org/~ichiro/COURSE_formalLang2016.html">Formal Language Theory (形式言語理論)
         </a>
       (2016/10--2017/3) The University of Tokyo</li></ul>
+
+<h2>Professional Services</h2>
+  <ul><li>Program committee member: 
+          <a id="30749575">FORMATS 2020.
+    </a></li></ul>
 </body>
 </html>
