--- a/html/index_template.html
+++ b/html/index_template.html
@@ -18,5 +18,8 @@
 
 <h2>Teaching Experiences</h2>
   <xi:include href="teaching_experience.html" parse="xml" />
+
+<h2>Professional Services</h2>
+  <xi:include href="professional_services.html" parse="xml" />
 </body>
 </html>
