deploy: 5f3c732315310bb4f77a9b06ac2ac38fb514cc8f

--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
 
 <h2>Professional Services</h2>
   <ul><li>Program committee member: 
-          <a id="30749575">FORMATS 2020.
-    </a></li></ul>
+          <a id="30749575">FORMATS 2020</a>.
+  </li></ul>
 </body>
 </html>
