--- a/html/professional_services.html
+++ b/html/professional_services.html
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ul><li>Program committee member: 
-          <a id="30749575">FORMATS 2020.
-    </a></li></ul>
+          <a id="30749575">FORMATS 2020</a>.
+  </li></ul>
