--- a/html/index.html
+++ b/html/index.html
@@ -52,13 +52,9 @@
         </li></ul>
 
 <h2>Teaching Experiences</h2>
-  <ul><li id="31477187">Computer Science Laboratory and Exercise 2 (Hardware) (計算機科学実験及演習２ (ハードウェア))
-      
-      (2020/10--) Kyoto University</li><li>
+  <ul><li id="31477187">Computer Science Laboratory and Exercise 2 (Hardware) (計算機科学実験及演習２ (ハードウェア)), 2020/10--, Kyoto University</li><li>
         Teaching assistant for 
-      <a href="http://group-mmm.org/~ichiro/COURSE_formalLang2016.html">Formal Language Theory (形式言語理論)
-        </a>
-      (2016/10--2017/3) The University of Tokyo</li></ul>
+      <a href="http://group-mmm.org/~ichiro/COURSE_formalLang2016.html">Formal Language Theory (形式言語理論)</a>, 2016/10--2017/3, The University of Tokyo</li></ul>
 
 <h2>Professional Services</h2>
   <ul><li>Program committee member: 
