deploy: 5202308998985b7069fdb6b06017645a6ff8cf77

--- a/html/publications.html
+++ b/html/publications.html
@@ -13,7 +13,7 @@
       </li>
     <li><span class="authors">Masaki Waga, <a href="http://group-mmm.org/~ichiro/">Ichiro Hasuo</a></span><span class="title">Moore-Machine Filtering for Timed and Untimed Pattern Matching.</span><span class="book-name">IEEE Trans. Comput. Aided Des. Integr. Circuits Syst.</span>,
       <span class="volume">vol. 37</span>,
-      <span class="number">no. 11</span>,
+      <span class="number">issue 11</span>,
       <span class="year">2018</span>,
         <span class="organization">IEEE</span>.
       <br/>
